tests/baselines/reference/templateStringUnterminated4.errors.txt
templateStringUnterminated4.ts(1,6): error TS1160: Unterminated template literal.


==== templateStringUnterminated4.ts (1 errors) ====
    `\\\`
         
!!! error TS1160: Unterminated template literal.